Closed Bug 394615 Opened 17 years ago Closed 17 years ago

0 byte downloads don't appear in download manager

Categories

(Toolkit :: Downloads API, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: Mardak, Assigned: Mardak)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch v1Splinter Review
Blank Active list. Dlmgr thinks there's an active download when quitting. Regressed with bug 390748.

This doesn't fix the problem of (I'm guessing) WBP not creating a blank file -- it doesn't make the output stream data->mStream until it gets an onDataAvail. Perhaps if it did MakeOutputStream at the end of OnStartRequest, it'll create a 0 byte file even if there are no writes??
http://mxr.mozilla.org/mozilla/source/embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp#830

At least with this fixed, the finished "download" will show up correctly and not have dlmanager confused about uncompleted downloads when quitting.
Attachment #279293 - Flags: review?(comrade693+bmo)
Comment on attachment 279293 [details] [diff] [review]
v1

r=sdwilsh
Attachment #279293 - Flags: review?(comrade693+bmo) → review+
Keywords: checkin-needed
Blocks: 394675
Blocks: 393821
No longer blocks: 394675
mozilla/toolkit/components/downloads/src/nsDownloadManager.h 	1.38 
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Can you file a bug on fixing this for real (i.e. in webbrowserpersist) instead of working around it in dl manager?
Verified FIXED with build: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a8pre) Gecko/2007090415 Minefield/3.0a8pre and a "File, Save Page As ..." / "Webpage, Complete".

"blank.htm" is saved corrently and displays "Done" status; exiting is also not a problem.
Status: RESOLVED → VERIFIED
(In reply to comment #3)
> Can you file a bug on fixing this for real (i.e. in webbrowserpersist)
Filed bug 394992 
http://litmus.mozilla.org/show_test.cgi?id=4631

in-litmus+ (I need to find a more permanent location to host the blank file, but that'll come later.)
Flags: in-litmus? → in-litmus+
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: