Bug 394615: 0 byte downloads don't appear in the download manager, patch by Edward Lee <edilee@gmail.com>, r=sdwilsh