toolkit/components/downloads/src/nsDownloadManager.h
@@ -162,6 +162,7 @@ protected:
   static PRBool IsInFinalStage(DownloadState aState)
   {
     return aState == nsIDownloadManager::DOWNLOAD_NOTSTARTED ||
+           aState == nsIDownloadManager::DOWNLOAD_QUEUED ||
            aState == nsIDownloadManager::DOWNLOAD_DOWNLOADING;
   }
 
